Adjusted documentation and create other methos o maintain Lead
